Changed some inputs to buttons

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 
     <!-- AREA FOR SINGLE PLAYER OR MULTIPLAYER -->
     <div id="gameMode" class="centerStuff">
-        <input type="submit" value="Singplayer">
-        <input type="submit" value="Multiplayer">   
+        <button>Singleplayer</button>
+        <button>Multiplayer</button>
     </div>
 
 
 <!-- PLAYERS CHOICE OF ACTION -->
 <div id="actions" class="centerStuff">
-    <input type="submit" value="ROCK">
-    <input type="submit" value="PAPER">
-    <input type="submit" value="SCISSORS">
+<button class="rock">rock</button>
+<button class="scissor">scissor</button>
+<button class="paper">paper</button>
 </div>
 
 
