Adding on to game rules

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJECT</title>
+    <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -51,12 +51,12 @@
 
 <!-- PLAYERS CHOICE OF ACTION -->
 <div id="actions" class="centerStuff">
-<button class="rock">rock</button>
-<button class="scissor">scissor</button>
-<button class="paper">paper</button>
+    <button id="rockBtn">rock</button>
+    <button id="scissorBtn">scissor</button>
+    <button id="paperBtn">paper</button>
 </div>
 
-
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 </body>
 </html>
