Moving around html code to look prettier

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+
+
     
 <!-- GAME TITLE AREA-->
 <div id="title" class="centerStuff">
     <h1>Rock Paper Scissors</h1>
 </div>
-
 
 
 
@@ -27,11 +28,15 @@
     </p>
 </div>
 
+
+
 <!-- IMAGE AREA FOR ACTION CHOSEN -->
 <div id="actionImage" class="centerStuff">
     <img src="./images/rockL.png" alt="players choice" class="setImageSize">
     <img src="./images/rockR.png" alt="players choice" class="setImageSize"> 
 </div>
+
+
 
 <!-- SETTINGS AREA  -->
 
@@ -49,6 +54,7 @@
     </div>
 
 
+
 <!-- PLAYERS CHOICE OF ACTION -->
 <div id="actions" class="centerStuff">
     <button id="rockBtn">rock</button>
@@ -56,7 +62,12 @@
     <button id="paperBtn">paper</button>
 </div>
 
+
+<!-- Javascript links -->
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
+
+
+
 </body>
 </html>
