Made buttons make changes to leftChoice variable and changes to leftImage

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
 
-    
+
 <!-- GAME TITLE AREA-->
 <div id="title" class="centerStuff">
-    <h1>Rock Paper Scissors</h1>
+    <h1>Rock Paper Scissor</h1>
 </div>
 
 
@@ -32,8 +32,8 @@
 
 <!-- IMAGE AREA FOR ACTION CHOSEN -->
 <div id="actionImage" class="centerStuff">
-    <img src="./images/rockL.png" alt="players choice" class="setImageSize">
-    <img src="./images/rockR.png" alt="players choice" class="setImageSize"> 
+    <img src="./images/rockL.png" alt="players choice" class="setImageSize" id="leftImage">
+    <img src="./images/rockR.png" alt="players choice" class="setImageSize" id="rightImage"> 
 </div>
 
 
@@ -61,6 +61,7 @@
     <button id="scissorBtn">scissor</button>
     <button id="paperBtn">paper</button>
 </div>
+
 
 
 <!-- Javascript links -->
