Starting to add multiplayer page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- PLAYERS CHOICE OF ACTION -->
 <div id="actions" class="centerStuff">
     <div id="leftActions">
-        <p>First Player</p>
+        <p>Player1</p>
         <button id="rockLBtn">rock</button>
         <button id="scissorLBtn">scissor</button>
         <button id="paperLBtn">paper</button>
@@ -52,7 +52,7 @@
     </div>
 
     <div id="rightActions">
-        <p>Second Player</p>
+        <p>Player1</p>
         <button id="rockRBtn">rock</button>
         <button id="scissorRBtn">scissor</button>
         <button id="paperRBtn">paper</button>
@@ -74,12 +74,13 @@
 
     <!-- AREA FOR SINGLE PLAYER OR MULTIPLAYER -->
     <div id="gameMode" class="centerStuff">
-        <button>Singleplayer</button>
-        <button>Multiplayer</button>
+        <a href="./pages/multiplayer.html">
+            <button>Multiplayer</button>
+        </a>
     </div>
 
 
-    
+
 <!-- Javascript links -->
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
