--- a/pages/multiplayer.html
+++ b/pages/multiplayer.html
@@ -64,7 +64,7 @@
     <!-- AREA FOR SINGLE PLAYER OR MULTIPLAYER -->
     <div id="gameMode" class="centerStuff">
         <a href="../index.html">
-            <button>Singleplayer</button>
+            <button>Multiplayer</button>
         </a>
     </div>
 
