Made string from change score turn into an int

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <div id="rightActions">
-        <p>Player1</p>
+        <p>Player2</p>
         <button id="rockRBtn">rock</button>
         <button id="scissorRBtn">scissor</button>
         <button id="paperRBtn">paper</button>
@@ -76,13 +76,15 @@
     </div>
 
 
+<!-- WORK ON MULTIPLAYER ON A LATER DATE -->
+
 
     <!-- AREA FOR SINGLE PLAYER OR MULTIPLAYER -->
-    <div id="gameMode" class="centerStuff">
+    <!-- <div id="gameMode" class="centerStuff">
         <a href="./pages/multiplayer.html">
             <button>Singleplayer</button>
         </a>
-    </div>
+    </div> -->
 
 
 
