--- a/pages/multiplayer.html
+++ b/pages/multiplayer.html
@@ -59,17 +59,17 @@
 
     </div>
 
-
+<!-- WORK ON MULTIPLAYER ON A LATER DATE -->
 
     <!-- AREA FOR SINGLE PLAYER OR MULTIPLAYER -->
     <div id="gameMode" class="centerStuff">
-        <a href="../index.html">
+        <!-- <a href="../index.html">
             <button>Multiplayer</button>
         </a>
-    </div>
+    </div> -->
 
 
-    
+
 <!-- Javascript links -->
 <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 <script src="../js/script.js"></script>
